# RoastMasterAI

./: README.md
coffee-imbalance/: README.md  requirements.txt
coffee-imbalance/scripts/: eval_external.py  label_features_by_csv.py  make_features.py  run_grid_search.py  run_tabular_cv.py  train_final.py
coffee-imbalance/src/: config.py  utils.py
coffee-imbalance/src/evaluation/: summarize.py
roastmasterai_full_pipeline/RoastMasterAI/: README.md
roastmasterai_full_pipeline/RoastMasterAI/coffee-imbalance/: DATA_CARD.md  Dockerfile  Makefile  environment.yml  pyproject.toml
roastmasterai_full_pipeline/RoastMasterAI/coffee-imbalance/scripts/: eval_external.py  make_features.py  make_report_figs.py  run_grid_search.py  run_tabular_cv.py  train_final.py  validate_labels.py
roastmasterai_full_pipeline/RoastMasterAI/coffee-imbalance/src/: config.py
roastmasterai_full_pipeline/RoastMasterAI/coffee-imbalance/src/evaluation/: summarize.py
roastmasterai_full_pipeline/RoastMasterAI/coffee-imbalance/src/models/: cnn_resnet.py  tabular_cv.py
roastmasterai_full_pipeline/RoastMasterAI/coffee-imbalance/src/oversampling/: racog_wrapper.py  smote_wrapper.py
roastmasterai_full_pipeline/RoastMasterAI/coffee-imbalance/src/phase1/: features.py  parse_artisan.py  preprocess.py
roastmasterai_full_pipeline/RoastMasterAI/coffee-imbalance/src/tracking/: mlflow_utils.py
roastmasterai_full_pipeline/RoastMasterAI/coffee-imbalance/tests/: test_smoke_pipeline.py
roastmasterai_full_pipeline/RoastMasterAI/coffee-imbalance/tests/data_samples/: example1.csv  example2.csv
(+10 files in other folders)
