[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coffee-imbalance"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pandas==2.2.2",
  "numpy==1.26.4",
  "scikit-learn==1.4.2",
  "imbalanced-learn==0.12.2",
  "xgboost==2.0.3",
  "pyts==0.13.0",
  "tqdm==4.66.4",
  "scipy==1.12.0",
  "statsmodels==0.14.1",
  "torch==2.2.1",
  "torchvision==0.17.1",
  "joblib==1.3.2",
  "mlflow==2.13.1",
  "matplotlib==3.8.4",
  "ruff==0.5.7",
  "pytest==8.2.1",
  "pytest-cov==5.0.0",
  "mypy==1.10.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
